# typst-upgrade

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: diffline.rs  global.rs  main.rs  term.rs  typstdep.rs  upgrade.rs
src/cmd/: config.rs  mod.rs  run.rs
tests/demo/: main.typ  mod1.typ  mod2.typ  mod3.typc
tests/exception1/: entry.typ
tests/exception2/: entry.compat.typ  entry.incompat.typ
tests/normal1/: entry.compat.typ  entry.incompat.typ  entry.typ
tests/normal2/: entry.compat.typst  entry.incompat.typst  entry.typst
tests/normal3/: entry.compat.typc  entry.incompat.typc  entry.typc
tests/proj/: f2.typst  f4.typ
tests/proj/lib2/: sublib1
