[package]
name = "typst-upgrade"
version = "1.2.0"
edition = "2021"
authors = ["coekjan <cn_yzr@qq.com>"]
license = "MIT"
description = "A tool to upgrade typst packages"
repository = "https://github.com/Coekjan/typst-upgrade"
keywords = ["cli", "typst"]
categories = ["development-tools"]
exclude = ["/.github", "/tests"]

[dependencies]
clap = { version = "4.5.4", features = [
    "derive",
    "env",
    "suggestions",
    "string",
] }
diff = "0.1.13"
once_cell = "1.19.0"
regex = "1.10.4"
reqwest = { version = "0.12.3", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
semver = "1.0.22"
serde_json = "1.0.115"
termcolor = "1.4.1"
typst-syntax = "0.11.0"

[dev-dependencies]
paste = "1.0.14"

[profile.release]
lto = true
panic = "abort"

[lints.rust]
unsafe_code = "forbid"
warnings = "deny"
