[package]
name = "typst-upgrade"
version = "1.2.5"
edition = "2021"
authors = ["coekjan <cn_yzr@qq.com>"]
license = "MIT"
description = "A tool to upgrade typst packages"
repository = "https://github.com/Coekjan/typst-upgrade"
keywords = ["cli", "typst"]
categories = ["development-tools"]
exclude = ["/.github", "/tests"]

[dependencies]
clap = { version = "4.5.13", features = [
    "derive",
    "env",
    "suggestions",
    "string",
] }
diff = "0.1.13"
once_cell = "1.19.0"
regex = "1.10.5"
reqwest = { version = "0.12.5", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
semver = "1.0.23"
serde_json = "1.0.121"
termcolor = "1.4.1"
typst-syntax = "0.11.1"

[dev-dependencies]
paste = "1.0.15"

[profile.release]
lto = true
panic = "abort"

[lints.rust]
unsafe_code = "forbid"
warnings = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
